2001-02-28  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/alpha/dl-machine.h (elf_machine_rela): Don't handle
	relocations which are not in ld.so if RTLD_BOOTSTRAP is defined.

	* sysdeps/powerpc/dl-machine.c (__process_machine_rela): Fix typo.

	* elf/dl-misc.c (_dl_debug_vdprintf): Fix type visible on 64-bit
	machines.

	* sysdeps/unix/sysv/linux/powerpc/sysdep.h (C_TEXT): Define.

2001-02-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/powerpc/elf/libc-start.c: Use new output functions and
	_dl_debug_mask.

	* elf/Versions [ld]: Don't export _dl_debug_message anymore.  Export
	_dl_debug_printf.
	* elf/dl-misc.c: Remove definition of _dl_sysdep_output and
	_dl_debug_message.  Define _dl_debug_vdprintf, _dl_debug_printf,
	_dl_debug_printf_c, and _dl_printf.
	* sysdeps/generic/ldsodefs.h: Don't declare _dl_sysdep_output,
	_dl_debug_message, _dl_sysdep_message, _dl_sysdep_error, and
	_dl_sysdep_fatal.  Declare _dl_debug_printf, _dl_debug_printf_c,
	_dl_printf, _dl_error_printf, and _dl_fatal_printf.
	* elf/dl-close.c: Replace use of old output functions with the new
	ones.
	* elf/dl-deps.c: Likewise.
	* elf/dl-error.c: Likewise.
	* elf/dl-fini.c: Likewise.
	* elf/dl-init.c: Likewise.
	* elf/dl-load.c: Likewise.
	* elf/dl-lookup.c: Likewise.
	* elf/dl-minimal.c: Likewise.
	* elf/dl-open.c: Likewise.
	* elf/dl-profile.c: Likewise.
	* elf/dl-reloc.c: Likewise.
	* elf/dl-version.c: Likewise.
	* elf/do-lookup.h: Likewise.
	* elf/rtld.c: Likewise.
	* sysdeps/generic/dl-cache.c: Likewise.
	* sysdeps/generic/dl-sysdep.c: Likewise.
	* sysdeps/generic/libc-start.c: Likewise.
	* sysdeps/i386/dl-machine.h: Likewise.
	* sysdeps/arm/dl-machine.h: Likewise.
	* sysdeps/hppa/dl-machine.h: Likewise.
	* sysdeps/m68k/dl-machine.h: Likewise.
	* sysdeps/powerpc/dl-machine.h: Likewise.
	* sysdeps/s390/dl-machine.h: Likewise.
	* sysdeps/sh/dl-machine.h: Likewise.
	* sysdeps/unix/sysv/linux/dl-osinfo.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/dl-librecon.h: Likewise.